--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "Lua.diagnostics.globals": [
         "ProfessionsFrame",
         "Professions",
-        "Add"
+        "Add",
+        "SetItemRef",
+        "ProfessionsRecipeListMixin"
     ]
 }
