--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,22 @@
         "Professions",
         "Add",
         "SetItemRef",
-        "ProfessionsRecipeListMixin"
+        "ProfessionsRecipeListMixin",
+        "CreateProfessionsRecipeTransaction"
+    ],
+    "Lua.runtime.version": "Lua 5.1",
+    "Lua.runtime.builtin": {
+        "basic": "disable",
+        "debug": "disable",
+        "io": "disable",
+        "math": "disable",
+        "os": "disable",
+        "package": "disable",
+        "string": "disable",
+        "table": "disable",
+        "utf8": "disable"
+    },
+    "Lua.workspace.library": [
+        "~\\.vscode\\extensions\\ketho.wow-api-0.17.5\\Annotations"
     ]
 }
